
Jan 12, 2026
> The website will perform initialization if the loading is done
> Fade out bottom black gradient when depth is below 50px
> Small changes on header and footer design and retweak some design
> Adjust .content-wrapper min-height from 78vh to 80vh
> Fixed fast-refresh vite
> Added function to prevent user from spamming sending message to Jaymantrix AI while thinking
> Changed Jaymantrix Logo

Jan 18, 2026
> Remove draggable img from "Game Record section" and redesign
> Supported on Netlify "https://jaymantrix-website.netlify.app/" while Vercel "https://jaymantrix-website.vercel.app/"

Jan 21. 2026
> Added hover settings icon for auto open and close settings panel
> Added function "Music Volume" slidebar on settings panel
> Fixed chat section not hide at initialization
> Added highlight effect on game section and game record section
> Try to adjust Jaymantrix AI first message

Jan 23, 2026
> "BrainAI.txt" is now deleted, and now it moves to the Firebase
> Added mini playlist for next music on settings panel
> Music "Menu Suite Arknights_ Endfield OST" is added
> Added left sidebar for easier navigation
> Added .content-wrapper moving animation when sidebar is moving
> Can save chat conversation when you restart or exit
> My Game Website section is added. (My Honkai: Star Rail Simulator is not fit so I'll fix it in the future)

Jan 24, 2026
> Added Jaymantrix AI Knowledge "MyWebsite.json"
> Added "No IMG icon" when the game icon from games section is failed
> Added scrollIntoView chatbox on mobile with height based on the screen mobile

Feb 02, 2026
> Remove hover pop-up on menu sidebar and settings panel
> Remove "X" button on menu sidebar
> Change close on settings panel from "Close" to "X"
> Fixed click issue on setting icon
> Added "About" section (Not final)

Feb 05, 2026
> Added my YT videos section. This is fetch on my YouTube API

Feb 06, 2026
> Restructure code on show section, fixed entrance animation (Except YT-vid-section)